--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,6 +45,7 @@
     <% if user_signed_in? %>
       <div class="navbar-form navbar-right">
         <% if current_user.is_admin %>
+            <%= link_to 'Админка', rails_admin_path, class: 'btn navbar-btn btn-danger btn-xs' %>
             <%= link_to 'Залить новые вопросы', new_questions_path, class: 'btn navbar-btn btn-warning btn-xs' %>
         <% end %>
         <%= link_to content_tag(:span, "#{current_user.name} - #{number_to_currency current_user.balance}"),
